--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,4 @@ before_install:
   - brew install automake cmake qt
 
 script:
-  - qmake --version
-  - which qmake
-  - ./distribute -mqgis
+  - ./distribute.sh -mqgis
